src/tests/errors/duplicate_var_decl/source.z42
void Main() {
    var x = 1;
    var x = 2;  // duplicate declaration in same scope — should be a compile error
}
